<resources>
    <string name="app_name">研修宝(学员端)</string>

    <string name="app_exit_tip">再按一次退出客户端</string>


    <string name="rationale_camera">此应用程序需要访问您的相机，以便您可以拍照.</string>
    <string name="rationale_write_read">此应用程序需要读取sd卡权限，请前往设置.</string>
    <string name="rationale_other">此应用程序需要申请使用权限，请前往设置.</string>

    <string name="no_camera_permissions">相机权限被禁用，请在权限设置中开启</string>
    <string name="no_storage_permissions">存储权限被禁用，请在权限设置中开启</string>

    <!--publicloadlayout start-->
    <string name="no_wrong_data">暂无课程</string>
    <string name="net_data_error">无网络数据，请点击刷新</string>
    <string name="retry">点击重试</string>
    <string name="no_notify">暂无通知</string>

    <!--publicloadlayout end-->

    <!--首页相关 start-->
    <string name="homepage">首页</string>
    <string name="notice">通知</string>
    <string name="classcircle">班级圈</string>
    <string name="my">我的</string>
    <string name="talk">聊聊</string>
    <string name="courseArrange">课程</string>
    <string name="resources">资源</string>
    <string name="projectTask">任务</string>
    <string name="schedule">日程</string>
    <string name="signIn">签到</string>
    <string name="currentProject">当前项目</string>

    <!--首页相关 end-->

    <!--课程相关 start-->
    <string name="time">时间</string>
    <string name="area">地点</string>
    <string name="evaluation">问卷</string>
    <string name="vote">投票</string>
    <string name="error_tip">你的输入内容中可能存在表情，请修改后再次提交!</string>
    <string name="submit_tip">提交后内容不可修改，是否继续提交?</string>
    <string name="submit_success">提交成功</string>
    <string name="submit_no_complete_tip">请您填写完整</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <!--课程相关 end-->

    <!--loginActivity-->
    <string name="logo_name">logo</string>
    <string name="sign_in">登录</string>
    <string name="please_input_account_number">请输入账号</string>
    <string name="please_input_password">请输入密码</string>
    <string name="check_in">签到</string>

    <!--签到 start-->
    <string name="please_put_qr_into_scan_area">将二维码放入扫描区域 </string>
    <string name="check_in_success">签到成功</string>
    <string name="check_in_fail">签到失败</string>
    <string name="check_in_time">签到时间</string>
    <string name="check_in_qr_already_expired">签到二维码已过期</string>
    <string name="check_in_qr_has_not_start">该签到尚未开始</string>
    <string name="check_in_qr_already_invalid">无效签到二维码</string>
    <string name="check_in_not_in_class">您不是班级成员</string>
    <string name="please_scan_new_check_in_qr">请扫描最新签到二维码</string>
    <string name="please_scan_correct_check_in_qr">请扫描正确签到二维码</string>
    <string name="check_in_agin">重新签到</string>
    <string name="check_in_time_plan">签到时间安排</string>
    <string name="check_in_now">本次签到</string>
    <string name="check_in_detail">签到详情</string>
    <string name="sure">确定</string>
    <string name="notification">通知</string>
    <string name="notification_detail">通知详情</string>
    <string name="notificationCreatedPersonAndTime">%1$s \u0020\u0020 %2$s</string>
    <string name="check_in_notes">签到记录</string>
    <!--签到 end-->

    <!--课程 start-->
    <string name="course">课程</string>
    <string name="course_jianjie">课程简介</string>
    <string name="specialist_title">讲师介绍</string>
    <!--课程 end-->

    <string name="has_completed">已完成</string>
    <string name="has_uncompleted">未完成</string>
    <!--登录 start-->
    <string name="net_error">网络异常</string>
    <string name="account_name_can_not_be_null">账户名不能为空</string>
    <string name="account_password_can_not_be_null">账户密码不能为空</string>
    <string name="you_have_check_in_success">你已成功签到</string>
    <!--登录 end-->

    <string name="version_updata">新版本更新</string>
    <string name="updata_after">以后再说</string>
    <string name="updata_now">立即更新</string>

    <string name="cancle">取消</string>
    <string name="send">发表</string>

    <string name="update_asynctask_downloading">正在下载</string>
    <string name="update_asynctask_downloading_fail">下载失败</string>
    <string name="update_asynctask_downloading_cel">取消下载</string>
    <string name="update_asynctask_downloading_success">下载完成</string>
    <string name="update_new">当前已是最新版本！</string>
    <string name="app_update">检测到新版本%s</string>
    <string name="app_update_sure">更新</string>
    <string name="app_update_cancle">取消</string>
    <string name="app_update_inoge">忽略</string>
    <string name="app_update_exit">退出</string>

    <string name="send_success">发布成功</string>
    <string name="check_in_plan">%1$s - %2$s</string>

    <string name="no_resource_hint">暂无资源</string>
    <string name="no_task_hint">暂无任务</string>
    <string name="no_schedule_hint">暂无日程</string>
    <string name="class_circle_comment_to_user">回复%1$s:</string>
    <string name="class_circle_comment_to_master">评论</string>
    <string name="send_class_circle_fail">发布失败，请重试！</string>
    <string name="send_class_circle_hint">这一刻的想法...(最多200字)</string>
    <string name="class_circle_comment_hint">评论</string>
    <string name="class_circle_like">赞</string>
    <string name="class_circle_comment">评论</string>
    <string name="comment_to_user">%1$s对%2$s说: %3$s</string>
    <string name="comment_to_master">%1$s: %2$s</string>
    <string name="text_all">全文</string>
    <string name="text_line">收起</string>
    <string name="headimg">头像</string>
    <string name="name">姓名</string>
    <string name="mobil">联系电话</string>
    <string name="sex">性别</string>
    <string name="stagena">学段</string>
    <string name="subjectname">学科</string>
    <string name="stage_subject">学段学科</string>
    <string name="school_name">单位/学校</string>
    <string name="logout">退出登录</string>
    <string name="pregistration">签到记录</string>
    <string name="lecturer">讲师</string>
    <string name="modify_user_name">修改姓名</string>
    <string name="save">保存</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="modify_sex">修改性别</string>
    <string name="mobile_phone_number">手机号</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="verification_code">验证码</string>
    <string name="please_input_new_password">请输入6-20位新密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="qrcode_signup">扫码注册</string>
    <string name="time_count">%1$ds</string>
    <string name="back">退出</string>
    <string name="choose_stage">选择学段</string>
    <string name="choose_subject">选择学科</string>
    <string name="feedback">意见反馈</string>
    <string name="input_feedback">请输入您的宝贵意见,最多输入200字</string>
    <string name="submit">提交</string>
    <string name="feedback_content_cannot_be_empty">反馈内容不能为空</string>
    <string name="publish">发布</string>
    <string name="class_circle_delete">删除</string>
    <string name="message">消息</string>
    <string name="data_refresh_fail">刷新数据失败</string>
    <string name="new_message">%1$d条新消息</string>
    <string name="choose_class">切换班级</string>
    <string name="get_qiniu_token_error">获取七牛上传凭证失败</string>
    <string name="select">%1$s/%2$s</string>


    <!-- leftDrawerLayout-->
    <string-array name="left_drawer_item_names">
        <item>班级首页</item>
        <item>我的资料</item>
        <item>签到记录</item>
        <item>意见反馈</item>
        <!--<item>投诉建议</item>-->
        <!--<item>设置</item>-->
        <!--<item>退出</item>-->
    </string-array>
    <string name="change_class">切换班级</string>
    <!--扫码注册  完善资料-->
    <string-array name="qrsignup_profile_title">
        <item>姓名</item>
        <item>联系电话</item>
        <item>性别</item>
        <item>学段</item>
        <item>学科</item>

    </string-array>

    <string name="comment">评论(暂不支持表情)</string>
    <string name="have_read_person_number"><Data><![CDATA[<font color="#999999">已查看人数:&#160;</font><font color="#0068BD"><b>%1$d/%2$d</b></font>]]></Data></string>
    <string name="have_finish_number"><Data><![CDATA[<font color="#999999">已完成人数:&#160;</font><font color="#0068BD"><b>%1$d/%2$d</b></font>]]></Data></string>
    <string name="course_comment">课程讨论</string>
    <!--course-->

    <string name="sign_in_number"><Data><![CDATA[<font color="#999999">%1$s :&#160;</font><font color="#666666">%2$d/%3$d</font>]]></Data></string>
    <string name="wait_for">待定</string>
    <string name="today_course">今日课程</string>
    <string name="course_task">课程任务</string>
    <string name="course_message">课程信息</string>
    <string name="course_lecture">课程讲师</string>
    <string name="lecture_brief">课程简介</string>
    <string name="course_resource">课程资源</string>
    <string name="manager_schedule">日程管理</string>
    <string name="publish_schedule">发布日程</string>
    <string name="publish_resource">上传资源</string>
    <string name="manager_resource">资源管理</string>
    <string name="upload">上传</string>
    <string name="resource_edit_title_hint">请输入资源名称 (最多20字）</string>
    <string name="resource_edit_lianjie_hint">网页链接</string>
    <string name="reply_number">回复(%1$s)</string>
    <string name="zan_number">%1$d个赞</string>
    <string name="check_in_notes_is_null">签到记录为空</string>
    <string name="no_brief">暂无简介</string>
    <string name="no_lecture">无授课讲师信息</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
