<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context="com.yanxiu.gphone.faceshow.homepage.activity.checkIn.CheckInSuccessActivity">

    <include
        android:id="@+id/title"
        layout="@layout/check_in_title_layout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_below="@id/title"
        android:background="@color/color_EBEFF2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_check_in_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="9dp"
            android:text="@string/check_in_fail"
            android:textColor="@color/color_333333"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/tv_error_statue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/check_in_qr_already_expired"
            android:textColor="@color/color_333333"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_error_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:text="@string/please_scan_new_check_in_qr"
            android:textSize="13dp" />


        <TextView
            android:id="@+id/tv_check_in_again"
            android:layout_width="112dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@drawable/selector_check_in_again_bg"
            android:gravity="center"
            android:text="@string/check_in_agin"
            android:textColor="@color/selector_check_in_again_color"
            android:textSize="14dp" />
    </LinearLayout>
</RelativeLayout>
