<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.yanxiu.gphone.faceshow.customview.ClearEditText
        android:id="@+id/edt_phone_number"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@color/color_white"
        android:hint="@string/mobile_phone_number"
        android:maxLength="11"
        android:inputType="phone"
        android:maxLines="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@color/color_333333"
        android:textColorHint="@color/color_999999"
        android:textSize="14sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@color/color_white">

        <TextView
            android:id="@+id/tv_get_verification_code"
            android:layout_width="70dp"
            android:layout_height="31dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/shape_verification_code_normal"
            android:gravity="center"
            android:text="@string/get_verification_code"
            android:textSize="12sp" />

        <com.yanxiu.gphone.faceshow.customview.ClearEditText
            android:id="@+id/edt_verification_code"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_toLeftOf="@id/tv_get_verification_code"
            android:background="@null"
            android:hint="@string/verification_code"
            android:maxLength="10"
            android:inputType="number"
            android:maxLines="1"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>