<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.yanxiu.gphone.faceshow.login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:background="@color/colorAccent"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="18dp" />


        <com.yanxiu.gphone.faceshow.customview.ClearEditText
            android:id="@+id/edt_account_number"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/shape_password_bg"
            android:hint="@string/please_input_account_number"
            android:inputType="text"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingStart="10dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_password_bg">

            <com.yanxiu.gphone.faceshow.customview.ClearEditText
                android:id="@+id/edt_account_password"
                android:layout_width="225dp"
                android:layout_height="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/please_input_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingStart="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <ImageView
                android:id="@+id/img_show_password"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@null"
                android:src="@drawable/icon_delete" />
        </RelativeLayout>


        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_password_bg"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            android:textSize="18dp" />

    </LinearLayout>
</ScrollView>
