<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:id="@+id/person_info"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:background="@color/color_white">

        <ImageView
            android:id="@+id/person_img"
            android:layout_width="@dimen/net_error_layout_retrybutton_top"
            android:layout_height="@dimen/net_error_layout_retrybutton_top"
            android:layout_centerVertical="true"
            android:layout_marginEnd="5dp"
            android:layout_toLeftOf="@+id/iv_enter" />

        <TextView
            android:id="@+id/tv_change_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:text="@string/headimg"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/my_item_text_size" />

        <ImageView
            android:id="@+id/iv_enter"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/selector_go" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/color_white"
        android:orientation="vertical"
        android:paddingLeft="15dp">

        <RelativeLayout
            android:id="@+id/rl_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/color_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/name"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/my_item_text_size" />

            <ImageView
                android:id="@+id/name_enter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/selector_go" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@id/name_enter"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/my_item_text_size"
                tools:text="孙长龙" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/color_EBEFF2" />

        <RelativeLayout
            android:id="@+id/rl_phone"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/color_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/mobil"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/my_item_text_size" />
            <ImageView
                android:id="@+id/phone_enter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/selector_go" />
            <TextView
                android:layout_toLeftOf="@+id/phone_enter"
                android:id="@+id/tv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:ellipsize="end"
                android:textColor="@color/color_999999"
                tools:text="1888888888"
                android:textSize="@dimen/my_item_text_size" />



        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/color_EBEFF2" />

        <RelativeLayout
            android:id="@+id/rl_sex"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/color_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/sex"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/my_item_text_size" />

            <ImageView
                android:id="@+id/sex_enter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/selector_go" />

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_toLeftOf="@id/sex_enter"
                android:ellipsize="end"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/my_item_text_size"
                tools:text="男" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/color_EBEFF2" />

        <RelativeLayout
            android:id="@+id/rl_stage_subject"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/color_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/stage_subject"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/my_item_text_size" />
            <ImageView
                android:id="@+id/stage_subject_enter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/selector_go" />

            <TextView
                android:id="@+id/tv_stage_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/stage_subject_enter"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:ellipsize="end"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/my_item_text_size" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/color_EBEFF2" />

        <RelativeLayout
            android:id="@+id/rl_school"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/color_white">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/school_name"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/my_item_text_size" />
            <ImageView
                android:id="@+id/school_enter"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/selector_go" />

            <TextView
                android:id="@+id/tv_school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/school_enter"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:ellipsize="end"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/my_item_text_size" />

        </RelativeLayout>
        <!--<View-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="2px"-->
        <!--android:background="@color/color_EBEFF2" />-->

        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="45dp"-->
        <!--android:background="@color/color_white">-->

        <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:text="@string/subjectname"-->
        <!--android:textColor="@color/color_333333"-->
        <!--android:textSize="@dimen/my_item_text_size" />-->

        <!--<TextView-->
        <!--android:id="@+id/tv_stduy"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_marginRight="15dp"-->
        <!--android:ellipsize="end"-->
        <!--android:textColor="@color/color_999999"-->
        <!--android:textSize="@dimen/my_item_text_size" />-->

        <!--</RelativeLayout>-->
    </LinearLayout>

</LinearLayout>